fixed account admin and account dl alignment issue

--- a/Microsoft.Teams.Apps.CompanyCommunicator/ClientApp/src/components/ChannelAdmins/channelAdmins.scss
+++ b/Microsoft.Teams.Apps.CompanyCommunicator/ClientApp/src/components/ChannelAdmins/channelAdmins.scss
@@ -1,2 +1,3 @@
-﻿body {
+﻿.channelAdmin,.channelAdminDL {
+    word-break: break-word;
 }
