--- a/Microsoft.Teams.Apps.CompanyCommunicator/ClientApp/src/components/Channels/channels.scss
+++ b/Microsoft.Teams.Apps.CompanyCommunicator/ClientApp/src/components/Channels/channels.scss
@@ -1,2 +1,3 @@
-﻿body {
+﻿.channelAdmin{
+    word-break: break-word;
 }
